--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -378,7 +378,7 @@
     </a>
 
   </div>
-
+  <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
