--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -378,6 +378,9 @@
     </a>
 
   </div>
+
+  <app-book *ngFor="let book of books" [author]="book.author" [title]="book.title"></app-book>
+
   <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
   <!-- Next Steps -->
   <h2>Next Steps</h2>
