--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,4 +1,4 @@
-<article>
-    <h1>{{ title }}</h1>
-    <p>{{ author }}</p>
-</article>
+<mat-card>
+    <mat-card-title>{{ title }}</mat-card-title>
+    <mat-card-subtitle>{{ author }}</mat-card-subtitle>
+</mat-card>
